Added a wrapper for threads call to enable HTTPS
