# swagger_server/models/retrain_info.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class RetrainInfo(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, caller_id: str=None):  # noqa: E501
+        """RetrainInfo - a model defined in Swagger
+
+        :param caller_id: The caller_id of this RetrainInfo.  # noqa: E501
+        :type caller_id: str
+        """
+        self.swagger_types = {
+            'caller_id': str
+        }
+
+        self.attribute_map = {
+            'caller_id': 'callerID'
+        }
+
+        self._caller_id = caller_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RetrainInfo':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The retrain_info of this RetrainInfo.  # noqa: E501
+        :rtype: RetrainInfo
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def caller_id(self) -> str:
+        """Gets the caller_id of this RetrainInfo.
+
+
+        :return: The caller_id of this RetrainInfo.
+        :rtype: str
+        """
+        return self._caller_id
+
+    @caller_id.setter
+    def caller_id(self, caller_id: str):
+        """Sets the caller_id of this RetrainInfo.
+
+
+        :param caller_id: The caller_id of this RetrainInfo.
+        :type caller_id: str
+        """
+        if caller_id is None:
+            raise ValueError("Invalid value for `caller_id`, must not be `None`")  # noqa: E501
+
+        self._caller_id = caller_id
